--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Asesino de Monstruos</title>
     <script src="https://npmcdn.com/vue/dist/vue.js"></script>
+
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
@@ -12,31 +13,31 @@
         <div class="small-6 columns">
             <h1 class="text-center">TU</h1>
             <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: goldenrod; margin: 0; color: white;">
-
+                <div class="healthbar text-center" v-bind:style="{backgroundColor: 'goldenrod', margin: '0', color: 'white', width: tu.vida+'%'}">
+                    {{tu.vida}}
                 </div>
             </div>
         </div>
         <div class="small-6 columns">
             <h1 class="text-center">MONSTRUO</h1>
             <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: rgb(0, 81, 128); margin: 0; color: white;">
-
+                <div class="healthbar text-center" v-bind:style="{backgroundColor: 'rgb(0, 81, 128)', margin: '0', color: 'white', width: monstruo.vida + '%'}">
+                    {{monstruo.vida}}
                 </div>
             </div>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls" v-if="!startGame">
         <div class="small-12 columns">
-            <button id="start-game">EMPEZAR JUEGO NUEVO</button>
+            <button @click="iniciarJuego" id="start-game">EMPEZAR JUEGO NUEVO</button>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls" v-else>
         <div class="small-12 columns">
-            <button id="attack">ATACAR</button>
-            <button id="special-attack">ATAQUE ESPECIAL</button>
-            <button id="heal">CURAR</button>
-            <button id="give-up">GIVE UP</button>
+            <button @click="atacar" id="attack">ATACAR</button>
+            <button @click="ataqueEspecial" id="special-attack">ATAQUE ESPECIAL</button>
+            <button @click="curar" id="heal">CURAR</button>
+            <button @click="rendirse" id="give-up">GIVE UP</button>
         </div>
     </section>
     <section class="row log">
@@ -49,5 +50,8 @@
         </div>
     </section>
 </div>
+
+    <script src="js/script.js"></script>
+
 </body>
 </html>
